<resources>
    <string name="app_name">quizAPI</string>
    <string name="category">Category: %1$s</string>
    <string name="answer">Answer</string>
    <string name="lives">Lives: %1$d</string>
    <string name="total_score">Current score: %1$d</string>
    <string name="try_again">Try Again</string>
    <string name="list_of_themes">List of Themes</string>
    <string name="start">Start Quiz</string>
    <string name="your_score">Your Score: %1$d</string>
    <string name="high_score">High Score: %1$d</string>
    <string name="restart">Restart</string>
    <string name="menu">Menu</string>
    <string name="timer_default_value">30</string>
    <string name="unselect_all"><u>Unselect all</u></string>
</resources>